@@ -57,9 +57,9 @@ static inline int atomic_dec(int *v)
 #define HAVE_CHECK_STACK_POS
 #define STACK_DIRECTION_DOWN 1
 
-static inline unsigned long get_stack_pos() {
-   unsigned long addr;
-   __asm("mr %%r1, %0" : "=g" (addr) );
+static inline size_t get_stack_pos() {
+   size_t addr;
+   __asm("mr %0, r1" : "=r" (addr) );
    return addr;
 }
 
